Closed Bug 1248863 Opened 8 years ago Closed 8 years ago

IonMonkey: MIPS: Fix MDefinition::constantValue re-factored

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: hev, Assigned: hev)

References

Details

Attachments

(2 files)

Sync changes of Bug 1246658 to MIPS.
Attachment #8720142 - Flags: review?(luke) → review+
Comment on attachment 8720142 [details] [diff] [review]
0003-IonMonkey-MIPS-Fix-MDefinition-constantValue-re-fact.patch

Review of attachment 8720142 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/src/jit/mips-shared/Lowering-mips-shared.cpp
@@ +305,2 @@
>          // A bounds check is only skipped for a positive index.
> +        MOZ_ASSERT(ptr->toConstant().toInt32() >= 0);

ptr->toConstant()->toInt32()

@@ +318,5 @@
>      MOZ_ASSERT(ptr->type() == MIRType_Int32);
>      LAllocation ptrAlloc;
>  
> +    if (ptr->isConstant() && !ins->needsBoundsCheck()) {
> +        MOZ_ASSERT(ptr->toConstant().toInt32() >= 0);

here too.
Attachment #8720660 - Flags: review?(arai.unmht)
Comment on attachment 8720660 [details] [diff] [review]
0001-IonMonkey-MIPS32-Fix-LIRGeneratorMIPS-visitBox.patch

Review of attachment 8720660 [details] [diff] [review]:
-----------------------------------------------------------------

thank you :)
Attachment #8720660 - Flags: review?(arai.unmht) → review+
https://hg.mozilla.org/mozilla-central/rev/43e61da8cc43
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: