Bug 1248863 - IonMonkey: MIPS32: Fix LIRGeneratorMIPS::visitBox. r=arai

---
 js/src/jit/mips32/Lowering-mips32.cpp | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)